fix project width on smaller resolutions

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -203,10 +203,22 @@ button.language-switcher {
      } 
     a.nav-previous {
         right: 30px;
-        background-image: url('/wp-content/themes/pop/public/media/arrow-navigation-right.png');
+        background-image: url('/admin/wp-content/themes/pop/public/media/arrow-navigation-right.png');
     }
     a.nav-next {
         left: 30px;
-        background-image: url('/wp-content/themes/pop/public/media/arrow-navigation-left.png');
+        background-image: url('/admin/wp-content/themes/pop/public/media/arrow-navigation-left.png');
+    }
+}
+
+
+@media (max-width: 1366px) {
+    #posts-navigation {
+        a.nav-previous {
+            right: 8px;
+        }
+        a.nav-next {
+            left: 8px;
+        }
     }
 }
