--- a/src/scss/pages/_project.scss
+++ b/src/scss/pages/_project.scss
@@ -70,7 +70,13 @@
 @media (max-width: 1361px) {
     .two-columns {
         grid-gap: 60px;
+        margin-right: 45px;
     }
+
+    .full-width {
+       margin-right: 45px; 
+    }
+        
 }
 
 @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) { 
